--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.8"
 fastapi = "^0.73.0"
 python-socketio = "^5.5.2"
 dicetray = "^2.1.1"
+figenv = "^1.2.0"
+uvicorn = "^0.17.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
