--- a/ui/package.json
+++ b/ui/package.json
@@ -2,7 +2,7 @@
   "name": "trophydice",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host=0.0.0.0",
     "build": "vue-tsc --noEmit && vite build",
     "build-notsc": "vite build",
     "preview": "vite preview --port 5050",
