--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@supercharge/strings": "^1.25.0",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
     "axios": "^0.26.0",
     "socket.io-client": "^4.4.1",
     "swagger-client": "^3.18.4",
