--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dicetray = "^2.1.1"
 figenv = "^1.2.0"
 uvicorn = "^0.17.4"
 websockets = "^10.1"
+aioredis = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
