--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ figenv = "^1.2.0"
 uvicorn = "^0.17.4"
 websockets = "^10.1"
 aioredis = "^2.0.1"
+newrelic = "^7.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
