--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.17.4"
 websockets = "^10.1"
 aioredis = "^2.0.1"
 newrelic = "^7.10.0"
+bugsnag = "^4.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
