--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ dicetray = "^2.1.1"
 figenv = "^1.2.0"
 uvicorn = "^0.17.4"
 websockets = "^10.1"
-aioredis = "^2.0.1"
 newrelic = "^7.10.0"
 bugsnag = "^4.2.1"
+redis = "^4.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
