--- a/ui/package.json
+++ b/ui/package.json
@@ -18,8 +18,9 @@
     "vite-plugin-vuetify": "^1.0.0-alpha.17",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
+    "vue-router": "^4.1.6",
     "vue-socket.io-extended": "^5.0.0-alpha.5",
-    "vue3-simple-alert": "^1.0.4"
+    "vue3-simple-alert-next": "^1.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
