--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@linusborg/vue-ko-fi-button": "^0.1.0",
     "@supercharge/strings": "^1.28.0",
-    "axios": "^0.27.2",
     "socket.io-client": "^4.5.1",
     "swagger-client": "^3.18.5",
     "vite-plugin-vuetify": "^1.0.0-alpha.17",
@@ -23,6 +22,7 @@
     "vue3-simple-alert-next": "^1.0.2"
   },
   "devDependencies": {
+    "@mdi/js": "^7.0.96",
     "@rushstack/eslint-patch": "^1.1.3",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
