--- a/ui/package.json
+++ b/ui/package.json
@@ -11,28 +11,28 @@
   },
   "dependencies": {
     "@linusborg/vue-ko-fi-button": "^0.1.0",
-    "@mdi/font": "^7.0.96",
-    "@supercharge/strings": "^1.28.0",
-    "socket.io-client": "^4.5.1",
+    "@mdi/font": "^7.1.96",
+    "@supercharge/strings": "^2.0.0",
+    "socket.io-client": "^4.5.4",
     "swagger-client": "^3.18.5",
-    "vite-plugin-vuetify": "^1.0.0-alpha.17",
-    "vue": "^3.2.37",
+    "vite-plugin-vuetify": "^1.0.1",
+    "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue-socket.io-extended": "^5.0.0-alpha.5",
     "vue3-simple-alert-next": "^1.0.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.3",
-    "@types/node": "^18.0.0",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@types/node": "^18.11.18",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.18.0",
-    "eslint-plugin-vue": "^9.1.1",
-    "prettier": "^2.7.1",
-    "typescript": "~4.7.4",
-    "vite": "^2.9.12",
-    "vue-tsc": "^0.38.1"
+    "eslint": "^8.31.0",
+    "eslint-plugin-vue": "^9.8.0",
+    "prettier": "^2.8.2",
+    "typescript": "~4.9.4",
+    "vite": "^4.0.4",
+    "vue-tsc": "^1.0.24"
   }
 }
