--- a/teststack.toml
+++ b/teststack.toml
@@ -1,11 +1,22 @@
 [tests]
-min_version = "v0.4.0"
+min_version = "v0.11.0"
+mount = false
 
 [tests.steps]
 install = [
     "apt update",
     "apt install nodejs npm",
 ]
+
+[tests.import]
+command = "make -j2 dev"
+
+[tests.ports]
+"8000/tcp" = ""
+"3000/tcp" = ""
+
+[tests.environment]
+TROPHYDICE_APP = "http://{HOST}:{PORT;3000/tcp}/"
 
 [services.redis]
 image = "redis:latest"
