fix order of rolls

--- a/fly.toml
+++ b/fly.toml
@@ -20,7 +20,7 @@ processes = []
   [services.concurrency]
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
+    type = "requests"
 
   [[services.ports]]
     force_https = true
