--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -12,5 +12,5 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: flyctl deploy --remote-only
+        - run: flyctl deploy --remote-only --strategy bluegreen
 
